@@ -31,6 +31,38 @@ shell prompt. You may want to use some of the optional arguments to the
 @file{configure} program. Type @code{configure --help} for a list. GNUstep
 specific options are at the end of this list (if any).
 
+The backend comes with several different window server and graphics
+drawing implementations. If you do nothing, the default ones will be
+chosen. You can can change this using configure. For instance,
+to choose the gslib graphical drawing implementation, run
+
+@example
+configure --enable-gslib
+@end example
+
+Type @code{configure --help} for a list of graphical drawing
+implementations.
+
+You can also change the name of the backend when configuring it. This is
+convienient if you want to have a different backend with different
+configurations. For instance, to create an xlib and and xdps backend,
+you could do this:
+
+@example
+configure --enable-xlib --with-name=xlib
+make install
+
+make distclean
+configure --enable-xdps --with-name=xdps
+make install
+@end example
+
+Before running an application, choose one backend using the defaults program:
+
+@example
+defaults write NSGlobalDomain GSBackend libgnustep-xdps
+@end example
+
 @node Compilation, Installing, Configuration, Top
 @section Compilation
 
