@@ -8,8 +8,8 @@
 @end ifset
 
 @section Noteworthy changes in version @samp{0.7.7}
+
 First release. Most components extracted from xgps.
-@end itemize
 
 @c ====================================================================
 @c Keep the next line just below the list of changes in most recent version.
