@@ -4,7 +4,7 @@
 # The version number of this release.
 GNUSTEP_BACK_MAJOR_VERSION=0
 GNUSTEP_BACK_MINOR_VERSION=7
-GNUSTEP_BACK_SUBMINOR_VERSION=5
+GNUSTEP_BACK_SUBMINOR_VERSION=7
 GNUSTEP_BACK_VERSION=${GNUSTEP_BACK_MAJOR_VERSION}.${GNUSTEP_BACK_MINOR_VERSION}.${GNUSTEP_BACK_SUBMINOR_VERSION}
 VERSION=${GNUSTEP_BACK_VERSION}
 
