@@ -30,8 +30,8 @@ ifeq ($(BACKEND_BUNDLE),)
   X_PRE_LIBS=@X_PRE_LIBS@
 
   BACKEND_LDFLAGS =
-  BACKEND_LIBS = -lgnustep-back
-  BACKEND_DEFINE = -DBACKEND_LIBRARY=1
+  BACKEND_LIBS = -lgnustep-@BACKEND_NAME@
+  BACKEND_DEFINE = -DBACKEND_LIBRARY=1 -D@BACKEND_NAME@_BACKEND_LIBRARY=1
 
   SYSTEM_INCLUDES = $(CONFIG_SYSTEM_INCL) $(GRAPHIC_CFLAGS)
   SYSTEM_LDFLAGS =
