@@ -15,3 +15,5 @@ BUILD_XDPS=@BUILD_XDPS@
 BUILD_X11=@BUILD_X11@
 BUILD_WIN32=@BUILD_WIN32@
 BUILD_WINLIB=@BUILD_WINLIB@
+
+BACKEND_NAME=@BACKEND_NAME@
