@@ -1,3 +1,15 @@
+2002-04-02  Adam Fedor  <fedor@gnu.org>
+
+	* configure.in (--with-name): Configure the name of the backend
+	* back.make.in: Idem.
+	* config.make.in: Idem.
+	* Source/GNUmakefile: Idem.
+	* Documentation/install.texi: Document.
+
+	* Source/GNUmakefile.preamble: Missing include.
+
+	* Source/x11/XGServerWindow.m: Fix slideImage method name.
+
 2002-04-01  Adam Fedor  <fedor@gnu.org>
 
 	* Source/x11/XGServerWindow.m ([XGServer -_setupRootWindow]): Read
